<resources>
    <string name="app_name">BittrexBot v1.0</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_flow">Flow</string>
    <string name="tab_text_1">Balances</string>
    <string name="tab_text_2">Orders</string>
    <string name="tab_text_3">Settings</string>

    <string name="back">Back</string>

    <!--    login-->
    <string name="enter_username">Enter your username</string>
    <string name="username_hint">Username</string>
    <string name="enter_pass">Enter your password</string>
    <string name="sign_in">SignIn</string>
    <string name="or">or</string>
    <string name="sign_up">SignUp</string>
    <string name="reenter_password">Repeat your password</string>
    <string name="i_m_not_a_robot">I\'m not a robot</string>

    <!--    not translated-->
    <!--    splash-->
    <string name="splash_text">Начни торги за пару кликов вместе\n
        с командой профессионалов</string>
    <string name="start">Начать</string>

    <!--    login-->
    <string name="welcome">Добро пожаловать</string>
    <string name="enter_account">Пожалуйста, войдите в свой аккаунт</string>
    <string name="email">Электронная почта</string>
    <string name="email_hint" translatable="false">example@example.com</string>
    <string name="pass">Пароль</string>
    <string name="pass_hint">Введите пароль</string>
    <string name="forgot_pass">Забыли пароль?</string>
    <string name="enter">Войти</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="reg">Зарегестрируйтесь</string>
    <string name="open_terminal">Войти в терминал</string>
    <string name="without_reg">Без регистрации</string>
    <string name="email_not_verified">Пожалуйста, пройдите верификацию e-mail.
        На вашу почту было отправлено письмо с подтверждением.</string>
    <string name="re_send">Отправить повторно</string>

    <!--    reg-->
    <string name="create_acc">Создайте аккаунт</string>
    <string name="please_fill_form">Пожалуйста, заполните форму ниже</string>
    <string name="confirm_pass">Подтверждение пароля</string>
    <string name="repeat_pass">Повторите пароль</string>
    <string name="pass_description">Пароль должен содержать не менее 8 символов</string>
    <string name="create_pass">Придумайте пароль</string>
    <string name="have_acc">Уже есть аккаунт?</string>
    <string name="enter_reg">Войдите</string>
    <string name="register">Зарегестрироваться</string>

    <!--    menu-->
    <string name="terminal">Терминал</string>
    <string name="bots">Боты</string>
    <string name="orders">Ордера</string>
    <string name="account">Аккаунт</string>

    <!--    account-->
    <string name="exchange_accounts">Акканты биржы</string>
    <string name="balance">Баланс</string>
    <string name="personal_data">Личные данные</string>
    <string name="exit">Выйти</string>

    <!--    dialog-->
    <string name="error">Ошибка</string>
    <string name="ok">OK</string>
    <string name="something_wrong">Упс. Что-то пошло не так.</string>

    <!--    recovery password-->
    <string name="recovery_title">Забыли пароль</string>
    <string name="recovery_description">Пожалуйста, введите электронную почту вашего аккаунта</string>
    <string name="recover">Восстановить</string>
    <string name="accept_title">Подтверждение кода</string>
    <string name="accept_description">На вашу почту было отправлено письмо с кодом подтверждения</string>
    <string name="code">Код</string>
    <string name="code_hint">Введите код с почты</string>
    <string name="accept">Подтвердить</string>
    <string name="create_password_title">Создание пароля</string>
    <string name="create_password_description">Пожалуйста, придумайте новый пароль для вашего аккаунта</string>
    <string name="save">Сохранить</string>


</resources>