<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary">

    <LinearLayout
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">


        <TextView
            style="@style/TextAppearance.AppCompat.EditTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUsername"
            style="@style/Widget.AppCompat.EditText.GrayEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextAppearance.AppCompat.EditTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pass" />


        <com.rexbot.bitrtix.bot.ui.views.PasswordEdittext
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordHint="@string/create_pass" />

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.4"
            android:fontFamily="@font/sf_pro"
            android:text="@string/pass_description"
            android:textColor="@color/selector_gray"
            android:textSize="12sp" />

        <TextView
            style="@style/TextAppearance.AppCompat.EditTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/confirm_pass" />


        <com.rexbot.bitrtix.bot.ui.views.PasswordEdittext
            android:id="@+id/etPassAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordHint="@string/repeat_pass" />


        <CheckBox
            android:id="@+id/cbRecaptcha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="false"
            android:text="@string/i_m_not_a_robot" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            style="@style/Base.TextAppearance.AppCompat.Button.BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:enabled="false"
            android:text="@string/register" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_acc"
                android:textColor="@color/base_text_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/enter_reg"
                android:textColor="@color/selector_blue" />
        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/progress"
        layout="@layout/layout_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/create_acc"
        android:textColor="@color/base_text_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0.8"
        android:text="@string/please_fill_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>