<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/selector_arrow_back" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_password_title"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.6"
            android:text="@string/create_password_description" />


        <TextView
            style="@style/TextAppearance.AppCompat.EditTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:text="@string/pass" />


        <com.rexbot.bitrtix.bot.ui.views.PasswordEdittext
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordHint="@string/create_pass" />

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:alpha="0.4"
            android:fontFamily="@font/sf_pro"
            android:text="@string/pass_description"
            android:textColor="@color/selector_gray"
            android:textSize="12sp" />

        <TextView
            style="@style/TextAppearance.AppCompat.EditTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:text="@string/confirm_pass" />


        <com.rexbot.bitrtix.bot.ui.views.PasswordEdittext
            android:id="@+id/etPassAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordHint="@string/repeat_pass" />

        <TextView
            style="@style/TextAppearance.AppCompat.EditTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:text="@string/code" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCode"
            style="@style/Widget.AppCompat.EditText.GrayEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code_hint"
            android:inputType="number" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAccept"
            style="@style/Base.TextAppearance.AppCompat.Button.BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:enabled="false"
            android:text="@string/save" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>