<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardBackgroundColor="@color/light_gray"
        app:cardCornerRadius="@dimen/blue_button_corner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="42dp"
                android:maxHeight="51dp"
                android:maxWidth="51dp"
                app:srcCompat="@drawable/ic_alert_ok" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/error"
                android:textColor="@color/base_text_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:alpha="0.8"
                android:gravity="center"
                android:text="@string/email_not_verified"
                android:textColor="@color/base_text_color"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/selector_alert_dialog_btn"
                android:paddingHorizontal="44dp"
                android:paddingVertical="10dp"
                android:text="@string/ok"
                android:textColor="@color/base_text_color" />

            <TextView
                android:id="@+id/btnSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="42dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/re_send"
                android:textColor="@color/selector_alert_dialog_secondary_btn"
                android:visibility="gone"
                tools:visibility="visible" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>